# tmuxtui

./: .dockerignore  .gitignore  Cargo.toml  README.md
demo/: Dockerfile  README.md  preview_scroll.py  record.py  run-preview-scroll.sh  run.sh
src/: app.rs  main.rs  managed_config.rs  tmux.rs  ui.rs
tests/: cut_paste.exp  cut_paste.rs  empty_tmux.exp  empty_tmux.rs  kill_session_selection.exp  kill_session_selection.rs  kill_window_selection.exp  kill_window_selection.rs  new_session_selection.exp  new_session_selection.rs  new_window_path.exp  new_window_path.rs  pin_pane_attach.exp  pin_pane_attach.rs  reattach_recent_session.exp  reattach_recent_session.rs  remote_tmux_pane.exp  remote_tmux_pane.rs  removed_session_window_selection.exp  removed_session_window_selection.rs  split_orientation.exp  split_orientation.rs  split_selection.exp  split_selection.rs  stale_last_target_selection.exp  stale_last_target_selection.rs
