[package]
name = "tmuxtui"
version = "0.1.0"
edition = "2024"

authors = ["Rohan Adwankar <rohan.adwankar@gmail.com>"]
description = "tmuxtui"
repository = "https://github.com/RohanAdwankar/tmuxtui"
license = "MIT"
keywords = ["tmuxtui", "devtool"]
[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.29.0"

[lints.clippy]
all = "warn"
